--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cloudinary==1.31.0
 dj-database-url==1.2.0
 Django==3.2
 django-cloudinary-storage==0.3.0
+django-crispy-forms==1.14.0
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 psycopg2==2.9.5
