--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 cloudinary==1.31.0
 dj-database-url==1.2.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2
 django-allauth==0.52.0
 django-cloudinary-storage==0.3.0
