--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 asgiref==3.6.0
 cloudinary==1.31.0
 dj-database-url==1.2.0
-dj3-cloudinary-storage==0.0.6
 Django==3.2
 django-allauth==0.52.0
 django-cloudinary-storage==0.3.0
 django-crispy-forms==1.14.0
 django-summernote==0.8.20.0
+gunicorn==20.1.0
 oauthlib==3.2.2
 psycopg2==2.9.5
 PyJWT==2.6.0
